# WML2017-pipeline

./: .gitignore  .secrets.baseline  CHANGELOG.md  CITATION.cff  CODEOWNERS.template  Makefile  README.md  README_CURSOR_START.md  README_PACKAGE.md  README_ja.md  REFACTOR_CHANGELOG_TOPPRO_AUDIT.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  sample_manifest.json
.devcontainer/: devcontainer.json
.github/: actions_pins.env
configs/: wmh2017_monai_smoke.yaml  wmh2017_monai_smoke_cpu_seed42.yaml  wmh2017_monai_tiny_smoke.yaml  wmh2017_monai_unet3d_full.yaml
docs/: README.md  agent_handoff.md  agent_handoff_wmh2017.md  audit_gap_register.md  current_state_snapshot.md  cursor_task_plan.md  experiment_journey.md  final_evidence_binder_index.md  hosted_ci_hash_verify.md  known_unknowns.md  model_validation_protocol_wmh2017.md  package_control_index.md  preview_promotion_plan.md  release_decision_record.md  release_state_crosswalk.md  release_state_policy.md  reproducibility_rehearsal.md  security_privacy_gate.md  setup_local_env.md  split_policy.md  training_config_monai_smoke.md  wmh2017_download_evidence_2026-06-16.md
main_pipeline/: .gitignore  .secrets.baseline  AUDIT_MAP.md  CHANGELOG.md  LICENSE  MODEL_CARD.md  NOTICE  README.md  README_CURSOR_START.md  README_ja.md  ROADMAP.md  pyproject.toml  requirements-lock.txt
registry/: agent_run_register.csv  claim_boundary_wmh2017.csv  claim_evidence_map.json  claim_register_wmh2017.csv  claim_wording_policy.csv  dataset_card_wmh2017.md  dataset_register_wmh2017.csv  (+12 more)
(+454 files in other folders)
